syntax = "proto3";
package v1;

message Data {
  int64 timestamp = 1;
  bytes id = 2;
  optional bool bounce = 3;
  bool session = 4;
  bool view = 5;
  int64 duration = 6;

  string browser = 19;
  string browser_version = 20;
  string city = 26;
  string country = 23;
  string device = 18;
  string domain = 25;
  string entry_page = 9;
  string event = 7;
  string exit_page = 10;
  string host = 27;
  string os = 21;
  string os_version = 22;
  string page = 8;
  string referrer = 12;
  string region = 24;
  string source = 11;
  string utm_campaign = 15;
  string utm_content = 16;
  string utm_medium = 14;
  string utm_source = 13;
  string utm_term = 17;

  message List { repeated Data items = 1; }
}

message Shards {
  repeated int64 min = 1;
  repeated int64 max = 2;
}